# all-in-one-infer

./: CLAUDE.md  NOTICE  README.md  install.sh  pyproject.toml  setup.py
.github/: PYPI_TRUSTED_PUBLISHING_SETUP.md
.github/workflows/: publish.yml
docs/: CHANGELOG.md  NAV_AUDIT.md  PACKAGE_STRUCTURE.md  PYPI_PUBLISHING.md  README.md  RELEASE_SUMMARY.md  TRAINING.md  USAGE_EXAMPLES.md
examples/: custom_separation_example.py  custom_separator_example.py
src/allin1_infer/: __about__.py  __init__.py  analyze.py  cache.py  checkpoints.py  cli.py  config.py  demix.py  helpers.py  session.py  sonify.py  spectrogram.py  stems.py  stems_input.py  typings.py  utils.py  visualize.py
src/allin1_infer/config/: checkpoints.toml
src/allin1_infer/models/: __init__.py  allinone.py  dinat.py  ensemble.py  loaders.py  neighborhood_attention.py  utils.py
src/allin1_infer/postprocessing/: __init__.py  functional.py  helpers.py  metrical.py  tempo.py
src/allin1fix/: analyze.py  demix.py  spectrogram.py  stems.py
src/allin1fix/models/: dinat.py  loaders.py
tests/: conftest.py  test_activation_fps.py  test_analyze.py  test_clean_api.py  test_device_auto_sentinel.py  test_neighborhood_attention.py  test_original_allinone.py  test_original_comparison.py  test_session_contract.py  test_sonify.py  test_visualize.py
tests/fixtures/: natten_0_17_5_golden.pt
