[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
# Note: Using setuptools to support post-install hook for auto-installing madmom
# Metadata is still defined in pyproject.toml (PEP 621)

[project]
name = "all-in-one-infer"  # PyPI project name (matches repository name)
# Note: Python package name is "allin1_infer" (in src/allin1_infer/)
# This allows: import allin1_infer (Python) while PyPI project is all-in-one-infer
dynamic = ["version"]
description = "All-In-One Music Structure Analyzer with source separation"
readme = "README.md"
requires-python = ">=3.9"  # scipy>=1.13 and madmom require Python>=3.9
license = {text = "MIT"}
# Note: license-files automatically includes LICENSE by default
authors = [
  { name = "Taejun Kim", email = "taejun@kaist.ac.kr" },
]
maintainers = [
  { name = "Package Maintainers" },
]
keywords = ["music", "beat", "downbeat", "tracking", "structure", "analysis", "allin1-infer", "source-separation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
# Note: natten is NOT required anymore — neighborhood attention ships as a
# pure-PyTorch implementation (src/allin1_infer/models/neighborhood_attention.py),
# so no compiled extension and no torch upper bound. If a compatible natten
# (0.17.x-0.19.x) is installed, it is picked up automatically as a faster GPU
# backend; see the [natten] extra below.
dependencies = [
  "numpy",
  "librosa",
  "torch>=2.0.0",
  "hydra-core",
  "omegaconf",
  "huggingface_hub",
  "matplotlib",
  "scipy>=1.0.0",  # scipy 1.13+ requires Python 3.9+, but madmom requires scipy>=1.13
  # Note: madmom is auto-installed via setup.py post-install hook (PyPI doesn't allow git dependencies)
  # Source separation (demucs-infer brings: torch, torchaudio, julius, lameenc, diffq, einops, openunmix)
  "demucs-infer",
]

[project.optional-dependencies]
# Optional fused GPU kernels for neighborhood attention. Requires a C++
# toolchain and torch<2.8 at install time (natten 0.17.x compiles against the
# installed torch). Purely a speed optimization — results are identical to the
# built-in pure-PyTorch implementation.
natten = [
  "natten>=0.17.1,<0.20",  # natten>=0.20 removed the legacy functional API and RPB support
  "torch>=2.0.0,<2.8.0",   # natten 0.17.x breaks on torch 2.8+ (_device_t removed)
  "torchaudio<2.8.0",      # keep torchaudio paired with torch<2.8 (mismatched pairs fail to load)
]
# Development dependencies
dev = [
  "black",
  "ruff",
]

[project.scripts]
all-in-one-infer = "allin1_infer.cli:main"

[project.urls]
Homepage = "https://github.com/openmirlab/all-in-one-infer"
Repository = "https://github.com/openmirlab/all-in-one-infer"
Documentation = "https://github.com/openmirlab/all-in-one-infer#readme"
"Bug Reports" = "https://github.com/openmirlab/all-in-one-infer/issues"
"Original All-In-One" = "https://github.com/mir-aidj/all-in-one"
Changelog = "https://github.com/openmirlab/all-in-one-infer/blob/main/docs/CHANGELOG.md"

# Setuptools configuration (since we're using setuptools.build_meta)
[tool.setuptools]
# Use find to automatically discover all packages in src/
packages = {find = {where = ["src"], exclude = ["tests*", "examples*"]}}

[tool.setuptools.package-dir]
"" = "src"

# Note: Version is read in setup.py from __about__.py
# Hatchling configs below are kept for reference but not used with setuptools backend
# [tool.hatch.version]
# path = "src/allin1_infer/__about__.py"

[tool.uv]
override-dependencies = [
  "scipy>=1.13.0",  # madmom requires scipy>=1.13, which requires Python 3.9+
]

[tool.uv.sources]
madmom = { git = "https://github.com/CPJKU/madmom" }

[dependency-groups]
dev = [
    "madmom",
]
